--- a/Files/style.css
+++ b/Files/style.css
@@ -267,13 +267,27 @@ button:active {
 
 vcenter > noflow {
     display: flex;
+    width: 0;
     height: 0;
     flex-direction: column;
     align-items: center;
-    gap: 3px;
-    width: fit-content;
+    /* gap: 3px; */
+    /* width: fit-content; */
 
     padding-top: 1em;
+}
+
+vcenter > noflow > div {
+    display: flex;
+    width: max-content;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
+}
+
+abbr {
+    text-decoration: underline;
+    text-decoration-style: dotted;
 }
 
 #info {
