--- a/Files/style.css
+++ b/Files/style.css
@@ -294,6 +294,15 @@ abbr {
     color: var(--color-warning);
 }
 
+.top-label {
+    position: absolute;
+    top: 20px;
+    text-align: center;
+    left: 0;
+    right: 0;
+    font-weight: bold;
+}
+
 .main {
     width: 100%;
     height: 100%;
