add theme and acccent settings

--- a/Files/style.css
+++ b/Files/style.css
@@ -9,6 +9,7 @@ body {
         background-color 200ms;
 
     overflow-x: hidden;
+    transition: background-color 200ms ease-out;
 }
 
 body, [theme='dracula'] {
