--- a/Files/style.css
+++ b/Files/style.css
@@ -718,3 +718,8 @@ select {
     width: 100%;
     height: 100%;
 }
+
+#server-name:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
