--- a/Files/style.css
+++ b/Files/style.css
@@ -593,8 +593,17 @@ select {
 }
 
 .control-button > div > i {
-    color: var(--accent);
+    color: var(--control-button-on);
     vertical-align: top;
+    transition: color 200ms;
+}
+
+.control-button.off > div > i {
+    color: var(--control-button-off);
+}
+
+.control-slider {
+    --value: 0;
 }
 
 .bar {
@@ -609,7 +618,7 @@ select {
     position: absolute;
     bottom: 0;
     left: calc( 50% - 1.5% );
-    height: calc( (100% - 16% * 2 / 5) * 0.3 + 8% * 2 / 5 );
+    height: calc( (100% - 16% * 2 / 5) * var(--value) + 8% * 2 / 5 );
     width: 3%;
     border-radius: 999999px;
     background-color: var(--control-slider-bar-fill);
@@ -657,7 +666,7 @@ select {
     background-color: var(--control-slider-handle);
     border-radius: 50%;
     position: absolute;
-    bottom: calc( (100% - 16% * 2 / 5) * 0.3 );
+    bottom: calc( (100% - 16% * 2 / 5) * var(--value) );
     right: calc( 50% - 16% / 2 );
     cursor: grab;
 }
@@ -717,6 +726,7 @@ select {
 .share {
     width: 100%;
     height: 100%;
+    user-select: none;
 }
 
 #server-name:hover {
